<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:id="@+id/layoutMain">

    <ImageView
        android:id="@+id/ivProfile"
        android:src="@drawable/ic_profile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/username"
        android:inputType="text"
        android:drawablePadding="20dp"
        android:background="@drawable/button_round"
        android:drawableLeft="@drawable/ic_drawer"
        android:paddingLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/ivProfile"
        app:layout_constraintLeft_toRightOf="@id/glRight"
        app:layout_constraintRight_toLeftOf="@id/glLeft" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:drawablePadding="20dp"
        android:background="@drawable/button_round"
        android:drawableLeft="@drawable/ic_drawer"
        android:paddingLeft="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@id/glRight"
        app:layout_constraintRight_toLeftOf="@id/glLeft"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <Button
        android:id="@+id/btLoginOrSignUp"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_round"
        android:text="@string/signInText"
        app:layout_constraintRight_toRightOf="@id/glRight"
        app:layout_constraintLeft_toLeftOf="@id/glLeft"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvLoginOrSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpText"
        android:textColor="@color/cast_libraries_material_featurehighlight_outer_highlight_default_color"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/btLoginOrSignUp"
        android:layout_marginTop="50dp"
        app:layout_constraintRight_toRightOf="@id/glRight"
        app:layout_constraintLeft_toLeftOf="@id/glLeft" />

    <android.support.constraint.Guideline
        android:id="@+id/glRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.constraint.Guideline
        android:id="@+id/glLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/tvOfflineMode"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/offlineModeText"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/text_offline_round" />

</android.support.constraint.ConstraintLayout>